[package]
name = "waxe"
version = "0.1.0"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"
description = "An Experiment"
keywords = ["mozjs", "javascript", "runtime", "engine", "spidermonkey", "experiment"]
repository = "https://github.com/sagudev/waxe"

[workspace]
members = [
    "roar",
    "waxe_core",
]

[dependencies]
rustyline = "6.2.0"
waxe_core = {path = "waxe_core"}