[package]
name = "waxe_core"
version = "0.1.0"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozjs =  {package = "mozjs", git = "https://github.com/servo/rust-mozjs", rev = "28248e1d6658e92dd5ecb0866e53a97f043b9b38", features = ["debugmozjs"]}